dev(background):on-the-fly tiif2jpeg for backgrounds
